# airbox-app

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
app/desktop/ffi/: Cargo.toml  build.rs
app/desktop/ffi/src/: lib.rs
app/desktop/win/FlyDrop/: FlyDrop.sln
app/desktop/win/FlyDrop/FlyDrop/: App.xaml  App.xaml.cs  FlyDrop.Old.csproj  FlyDrop.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
app/desktop/win/FlyDrop/FlyDrop.App/: App.xaml  App.xaml.cs  FlyDrop.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest  appsettings.json
app/desktop/win/FlyDrop/FlyDrop.App.Core/: FlyDrop.App.Core.csproj
app/desktop/win/FlyDrop/FlyDrop.App.Core/Contracts/Services/: IFileService.cs  ISampleDataService.cs
app/desktop/win/FlyDrop/FlyDrop.App.Core/Helpers/: Json.cs
app/desktop/win/FlyDrop/FlyDrop.App.Core/Models/: SampleCompany.cs  SampleOrder.cs  SampleOrderDetail.cs
app/desktop/win/FlyDrop/FlyDrop.App.Core/Services/: FileService.cs  SampleDataService.cs
app/desktop/win/FlyDrop/FlyDrop.App/Activation/: ActivationHandler.cs  AppNotificationActivationHandler.cs  DefaultActivationHandler.cs  IActivationHandler.cs
app/desktop/win/FlyDrop/FlyDrop.App/Behaviors/: NavigationViewHeaderBehavior.cs  NavigationViewHeaderMode.cs
app/desktop/win/FlyDrop/FlyDrop.App/Contracts/Services/: IActivationService.cs  IAppNotificationService.cs  ILocalSettingsService.cs  INavigationService.cs  INavigationViewService.cs  IPageService.cs  IThemeSelectorService.cs
app/desktop/win/FlyDrop/FlyDrop.App/Contracts/ViewModels/: INavigationAware.cs
app/desktop/win/FlyDrop/FlyDrop.App/Helpers/: DisposableHelper.cs  EnumToBooleanConverter.cs  FrameExtensions.cs  NavigationHelper.cs  ResourceExtensions.cs  RuntimeHelper.cs  SettingsStorageExtensions.cs  TitleBarHelper.cs
app/desktop/win/FlyDrop/FlyDrop.App/Models/: LocalSettingsOptions.cs
app/desktop/win/FlyDrop/FlyDrop.App/Properties/: launchsettings.json
app/desktop/win/FlyDrop/FlyDrop.App/Services/: ActivationService.cs  ApiLifetimeManager.cs  ApiService.cs  AppNotificationService.cs  LocalSettingsService.cs  NavigationService.cs  NavigationViewService.cs  PageService.cs  ThemeSelectorService.cs
app/desktop/win/FlyDrop/FlyDrop.App/Strings/en-us/: Resources.resw
app/desktop/win/FlyDrop/FlyDrop.App/ViewModels/: DevicesDetailViewModel.cs  DevicesViewModel.cs  SettingsViewModel.cs  ShareViewModel.cs  ShellViewModel.cs
app/desktop/win/FlyDrop/FlyDrop.App/Views/: DevicesDetailPage.xaml  DevicesDetailPage.xaml.cs  DevicesPage.xaml  DevicesPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  SharePage.xaml  SharePage.xaml.cs  ShellPage.xaml  ShellPage.xaml.cs
app/desktop/win/FlyDrop/FlyDrop.Cli/: FlyDrop.Cli.csproj  Program.cs
app/desktop/win/FlyDrop/FlyDrop.Core/: Api.cs  Buffer.cs  FlyDrop.Core.csproj  Native.cs  Native.g.cs
app/desktop/win/FlyDrop/FlyDrop.Core/Internal/: IPEndpointJsonConverter.cs  JsonSnakeCaseLowerNamingPolicy.cs
app/desktop/win/FlyDrop/FlyDrop.Core/Models/Commands/: Ack.cs  Command.cs  Pair.cs  SendPeer.cs  SetConfiguration.cs  StartDiscovery.cs  StopDiscovery.cs
app/desktop/win/FlyDrop/FlyDrop.Core/Models/Common/: ApiResponse.cs  Configuration.cs  PeerMetadata.cs
app/desktop/win/FlyDrop/FlyDrop.Tests/: FlyDrop.Tests.csproj  UnitTest1.cs
app/desktop/win/FlyDrop/FlyDrop/Pages/: Devices.xaml  Devices.xaml.cs  Settings.xaml  Settings.xaml.cs
app/desktop/win/FlyDrop/FlyDrop/Properties/: launchSettings.json
app/ffi/: Cargo.toml  build.rs
app/ffi/src/: lib.rs
core/: Cargo.toml
core/src/: conf.rs  err.rs  error.rs  lan.rs  lib.rs  node.rs  plat.rs  secret.rs
crate/p2p/: Cargo.toml
crate/p2p/src/: discovery.rs  err.rs  event.rs  event_loop.rs  hmac.rs  lib.rs  manager.rs  net.rs  pairing.rs  proto.rs
crate/p2p/src/peer/: id.rs  metadata.rs  mod.rs  peer.rs
crate/p2p/tests/: manager.rs
crate/p2p/tests/common/: mod.rs
crates/p2p/src/: crypto.rs  discovery.rs  lib.rs  manager.rs  net.rs  proto.rs
crates/p2p/src/peer/: id.rs  mod.rs  peer.rs
crates/p2p/tests/: discovery.rs  manager.rs
doc/: Protocol.md
docs/: Protocol.md
lib/core/: Cargo.toml
lib/core/src/: api.rs  conf.rs  disc.rs  err.rs  lan.rs  lib.rs  node.rs  peer.rs  plat.rs  proto.rs  secret.rs  state.rs  store.rs
lib/core/tests/: node.rs
lib/p2p/: Cargo.toml
lib/p2p/src/: discovery.rs  err.rs  event.rs  event_loop.rs  hmac.rs  lib.rs  manager.rs  net.rs  proto.rs
lib/p2p/src/peer/: id.rs  mod.rs  peer.rs
lib/p2p/tests/: manager.rs
lib/p2p/tests/common/: mod.rs
script/net/: Multicast-Listen.ps1  Multicast-Send.ps1
tools/udpm/: Cargo.toml
tools/udpm/src/: main.rs
(+8 files in other folders)
