[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rusqlite = { version = "0.29.0", features = ["bundled"] }
p2p = { path = "../crate/p2p" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
gethostname = "0.4.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.96"
keyring = "2.0.2"
if-watch = { version = "3.0.1", features = ["tokio"] }
futures = { workspace = true }
