[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
fdcore = { path = "../../lib/core" }
dirs = "5.0.1"
once_cell = "1.17.1"
serde_json = "1.0.96"
tokio = { workspace = true, features = [ "rt", "rt-multi-thread"] }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"


# [target.'cfg(target_os = "win")'.dependencies]
# [build-dependencies]
# csbindgen = "1.7.2"
