[package]
name = "fdcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build]
# rustflags = ["--cfg", "tokio_unstable"]

[dependencies]
# rusqlite = { version = "0.29.0", features = ["bundled"] }
p2p = { path = "../p2p" }
tokio = { workspace = true, features = ["io-util", "time", "tracing"] }
tokio-util = { workspace = true, features = ["io", "io-util"] }
tracing = { workspace = true }
thiserror = { workspace = true }
gethostname = "0.4.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.96"
keyring = "2.0.2"
if-watch = { version = "3.0.1", features = ["tokio"] }
futures = { workspace = true }
open = "4.1.0"
bytes = { workspace = true}
# base64 = "0.21.2"
rand = "0.8.5"
# image = "0.23.14"

qrcode = "0.12.0"
image = "0.23.14" 
[dev-dependencies]
console-subscriber = "0.1.10"
tracing-subscriber = "0.3.16"
# [dev-dependencies]
# bardecoder = "0.4.2"
