[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.26"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "net", "rt", "time", "io-util", "tracing"] }
serde = { workspace = true, features = ["derive"] }
rand = "0.8.5"
ring = "0.16.20"
num_enum = "0.5.10"
dashmap = "5.4.0"
totp-rs = { version = "4.2.0", features = ["qr"] }
rcgen = "0.10.0"
rustls = "0.20.8"
tokio-util = { workspace = true, features = ["net", "codec"] }
bytes = { workspace = true}
futures = { workspace = true }
hex-literal = "0.4.1"
byteorder = "1.4.3"
socket2 = "0.5.2"

[dev-dependencies]
tracing-subscriber = "0.3.16"

